--- a/.github/workflows/pipeline1.yml
+++ b/.github/workflows/pipeline1.yml
@@ -28,6 +28,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script in stage1
         run: echo "Hello, world! from stage1"
+             
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script in stage1
@@ -35,6 +36,7 @@ jobs:
         run: |
           echo "Add other actions to build, from stage1"
           echo "test, and deploy your project. from stage1"
+          sleep 10
 
   stage2:
     # The type of runner that the job will run on
@@ -54,3 +56,4 @@ jobs:
         run: |
           echo "Add other actions to build, from stage2"
           echo "test, and deploy your project. from stage2"
+          sleep 10
