--- a/.github/workflows/pipeline1.yml
+++ b/.github/workflows/pipeline1.yml
@@ -55,7 +55,26 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script in stage2
         run: |
-          ech0 "Add other actions to build, from stage2"
+          echo "Add other actions to build, from stage2"
           echo "test, and deploy your project. from stage2"
           sleep 10
-   
+    stage3:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    needs: stage2
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v4
+
+      # Runs a single command using the runners shell
+      - name: Run a one-line script in stage3
+        run: echo "Hello, world! from stage3"
+
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script in stage3
+        run: |
+          echo "Add other actions to build, from stage3"
+          echo "test, and deploy your project. from stage3"
+          sleep 10
