--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -45,7 +45,7 @@ jobs:
       working-directory: ${{ env.TF_WORKING_DIR }}
       run: terraform plan -out=tfplan
 
-    - name: Apply Terraform
+    - name: distroy Terraform
       if: github.ref == 'refs/heads/master'  # Only apply on the main branch
       working-directory: ${{ env.TF_WORKING_DIR }}
-      run: terraform apply -auto-approve tfplan
+      run: terraform distroy -auto-approve tfplan
