--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -48,4 +48,4 @@ jobs:
     - name: destroy Terraform
       if: github.ref == 'refs/heads/master'  # Only apply on the main branch
       working-directory: ${{ env.TF_WORKING_DIR }}
-      run: terraform destroy -auto-approve tfplan
+      run: terraform destroy -auto-approve tfdestroy
