--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,7 +19,7 @@ jobs:
 
     env:  #env variable to use while runing pipeline
       TF_VERSION: 1.1.0  # Specify your Terraform version here
-      TF_WORKING_DIR: . # Path to your Terraform code directory
+      TF_WORKING_DIR: ./excerise1/ # Path to your Terraform code directory
 
     steps:
     - name: Checkout code
