--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,7 +19,11 @@ jobs:
 
     env:  #env variable to use while runing pipeline
       TF_VERSION: 1.1.0  # Specify your Terraform version here
-      TF_WORKING_DIR: ./excerise1/ # Path to your Terraform code directory
+      TF_WORKING_DIR_EX1: ./excerise1/ # Path to your Terraform code directory
+      TF_WORKING_DIR_EX2: ./excerise2/
+      TF_WORKING_DIR_EX3: ./excerise3/
+      TF_WORKING_DIR_EX4: ./excerise4/
+
 
     steps:
     - name: Checkout code
@@ -60,7 +64,65 @@ jobs:
       working-directory: ${{ env.TF_WORKING_DIR }}
       run: terraform plan -out=tfplan
       
-    # - name: apply Terraform
-    #   if: github.ref == 'refs/heads/master'  # Only apply on the main branch
-    #   working-directory: ${{ env.TF_WORKING_DIR }}
-    #   run: terraform apply -auto-approve tfplan
+    - name: apply Terraform
+      if: github.ref == 'refs/heads/master'  # Only apply on the main branch
+      working-directory: ${{ env.TF_WORKING_DIR }}
+      run: terraform apply -auto-approve tfplan
+
+
+  excerise2:  #job name
+
+    # online server provided by github to run application code 
+    runs-on: ubuntu-latest
+    needs: excerise1
+    env:  #env variable to use while runing pipeline
+      TF_VERSION: 1.1.0  # Specify your Terraform version here
+      TF_WORKING_DIR_EX1: ./excerise1/ # Path to your Terraform code directory
+      TF_WORKING_DIR_EX2: ./excerise2/
+      TF_WORKING_DIR_EX3: ./excerise3/
+      TF_WORKING_DIR_EX4: ./excerise4/
+
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v2
+      with:
+        terraform_version: ${{ env.TF_VERSION }}
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-south-1  # Specify your AWS region here
+
+
+    - name: Run a multi-line script in stage1
+      run: |
+        ls -la 
+        pwd
+        tree
+
+    - name: Initialize Terraform
+      working-directory: ${{ env.TF_WORKING_DIR_EX2 }}
+      run: |
+        pwd
+        ls -la
+        terraform init
+
+    - name: Validate Terraform
+      working-directory: ${{ env.TF_WORKING_DIR_EX2 }}
+      run: terraform validate
+
+    - name: Plan Terraform
+      id: plan
+      working-directory: ${{ env.TF_WORKING_DIR_EX2}}
+      run: terraform plan -out=tfplan
+      
+    - name: apply Terraform
+      if: github.ref == 'refs/heads/master'  # Only apply on the main branch
+      working-directory: ${{ env.TF_WORKING_DIR_EX2 }}
+      run: terraform apply -auto-approve tfplan
